tests/baselines/reference/duplicateInterfaceMembers1.errors.txt
tests/cases/compiler/duplicateInterfaceMembers1.ts(3,4): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/duplicateInterfaceMembers1.ts (1 errors) ====
    interface Bar {
       x: number;
       x: number;
       ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    